@@ -1,13 +1,11 @@
 package com.albatross.api.v1.company.blueraven.services;
 
 import com.albatross.api.utils.SqlCache;
-import com.albatross.api.v1.company.blueraven.services.tournament.queries.TournamentPoolQuery;
-import com.albatross.api.v1.flow.queries.DataViewQuery;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
-;import java.util.Collections;
+import java.util.Map;
 
 @Slf4j
 @Service
@@ -17,12 +15,12 @@ public class BlueravenProjectService {
   private final SqlCache sqlCache;
 
   public void processMetroAreaPostalCodes() {
-    sqlCache.queryBySql(updateProjectMetroAreaPostalCodes, Collections.emptyMap(), String.class);
+    sqlCache.queryBySql(updateProjectMetroAreaPostalCodes, Map.of(), String.class);
   }
 
   //language=PostgreSQL
   public final static String updateProjectMetroAreaPostalCodes = """
-    select from brs.cron_update_project_metro_areas();
-  """;
+      select from brs.cron_update_project_metro_areas();
+    """;
 
 }
